// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultCreator reducer handles actions clearCreator 1`] = `
Immutable.VaultCreatorState {
  "password": "",
  "repeat": "",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles actions setPassword 1`] = `
Immutable.VaultCreatorState {
  "password": "test password",
  "repeat": "",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles actions setRepeat 1`] = `
Immutable.VaultCreatorState {
  "password": "",
  "repeat": "test password",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles epics createVault bootstraps general channel to new account 1`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
    },
    "name": "General",
    "private": true,
    "hash": "eJxNj0FugzAQRa9ieR1VKQEKvUAu0FV3A4yx8eAYeyCxo9y9rrqpNNJIo6//3jylgxXlp7yiwwAkT9IHcwCXG4cdTxKmKWCMJZIZI0fwZNz83mJ9R7st6dGd07JkVdWZkyKuxoa5hYNrp3h2S9vXrsPm0anc+NDjEqcL9bSmVVW91YuzhTlhHIPxbG6ugL60iaIMiPnPSowanEMScIAhGAgF3wQQiT1iiOKmxPcASQxJTKhgJ34rpRZT0X5Kc9hf+7L+P+Cb4KsxZ6YOVqBtbWadDx0ujTt3umoP7bW7V4/WdhcOij/iFl2/2amVr9cPcL5vNw==",
    "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
    "unread": 0,
    "description": "This is a general channel available to all users of Zbay by default.",
  },
]
`;

exports[`VaultCreator reducer handles epics createVault clears creator if creating fails 1`] = `
Immutable.VaultCreatorState {
  "password": "",
  "repeat": "",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles epics createVault clears creator if unlocking fails 1`] = `
Immutable.VaultCreatorState {
  "password": "",
  "repeat": "",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles epics createVault creates identity and sets balance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "thisisatestid",
    "address": "sapling-zcash-address",
    "name": "Saturn",
    "balance": "12.345",
  },
  "fetchingBalance": false,
  "errors": "",
}
`;

exports[`VaultCreator reducer handles epics createVault creates the vault 1`] = `
Array [
  Array [
    Object {
      "masterPassword": "test password",
      "network": "testnet",
    },
  ],
]
`;

exports[`VaultCreator reducer handles epics createVault throws if passwords don't match 1`] = `"Can't create vault, passwords don't match."`;

exports[`VaultCreator reducer handles epics createVault unlocks the vault 1`] = `
Array [
  Array [
    Object {
      "createSource": true,
      "masterPassword": "test password",
      "network": "testnet",
    },
  ],
]
`;
